disable centr pm for submodule

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -5,6 +5,7 @@
         <LangVersion>12.0</LangVersion>
         <Authors>Jeremy D. Miller;Babu Annamalai;Oskar Dudycz;Joona-Pekka Kokko</Authors>
         <PackageIconUrl>https://martendb.io/logo.png</PackageIconUrl>
+        <ManagePackageVersionsCentrally>false</ManagePackageVersionsCentrally>
         <PackageProjectUrl>https://martendb.io/</PackageProjectUrl>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
         <NoWarn>1570;1571;1572;1573;1574;1587;1591;1701;1702;1711;1735;0618</NoWarn>
